<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".reminder_page.EditReminderActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_edit_reminder"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tb_edit_reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_toolbar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tb_edit_reminder"
        app:layout_constraintEnd_toEndOf="@+id/tb_edit_reminder"
        app:layout_constraintStart_toStartOf="@+id/tb_edit_reminder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="Tanggal Servis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_edit_reminder" />

    <TextView
        android:id="@+id/tv_set_tgl_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_tgl"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/title_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/img_date_picker_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/img_date_picker_edit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_tgl_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_set_tgl_edit"
        app:srcCompat="@drawable/ic_date_range_white_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Jam Servis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_tgl_edit" />

    <TextView
        android:id="@+id/tv_set_jam_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_jam"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/title_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/img_time_picker_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/img_time_picker_edit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_jam_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_set_jam_edit"
        app:srcCompat="@drawable/ic_access_time_white_24dp" />

    <EditText
        android:id="@+id/edt_note_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/title_toolbar"
        android:hint="@string/note"
        android:maxLines="3"
        android:inputType="textMultiLine"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_jam_edit" />

    <Button
        android:id="@+id/btn_edit_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/ubah_data"
        android:textSize="@dimen/text_button"
        android:textAllCaps="false"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_note_edit" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_reminder"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sketsamotobackground" />
</androidx.constraintlayout.widget.ConstraintLayout>